RESOLVED FIXED 100874
[CSS Exclusions] Polygon with horizontal bottom edges returns incorrect segments
https://bugs.webkit.org/show_bug.cgi?id=100874
Summary [CSS Exclusions] Polygon with horizontal bottom edges returns incorrect segments
Bear Travis
Reported 2012-10-31 11:56:29 PDT
Created attachment 171698 [details] Test case The attached polygon returns the segments [0, 150] and [250, 0] for the second line, when it should return [0, 100], [150, 250].
Attachments
Test case (541 bytes, text/html)
2012-10-31 11:56 PDT, Bear Travis
no flags
Patch (15.03 KB, patch)
2012-11-07 11:11 PST, Hans Muller
no flags
Hans Muller
Comment 1 2012-11-07 11:11:30 PST
Dirk Schulze
Comment 2 2012-11-08 16:04:45 PST
Comment on attachment 172841 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=172841&action=review LGTM. r=me. > Source/WebCore/ChangeLog:11 > + y parameter corresponds to. If the y corresponds to the top of the line, then isaMinY the parameter s/isaMinY/isMinY/
WebKit Review Bot
Comment 3 2012-11-08 16:10:26 PST
Comment on attachment 172841 [details] Patch Clearing flags on attachment: 172841 Committed r133968: <http://trac.webkit.org/changeset/133968>
WebKit Review Bot
Comment 4 2012-11-08 16:10:30 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.